library/src/libqitemselectionmodel.h

typedef struct QAbstractItemModel QAbstractItemModel;
typedef struct QItemSelection QItemSelection;
typedef struct QItemSelectionModel QItemSelectionModel;
typedef struct QItemSelectionRange QItemSelectionRange;
typedef struct QMetaObject QMetaObject;
typedef struct QModelIndex QModelIndex;
typedef struct QPersistentModelIndex QPersistentModelIndex;
QTLIBC_API QItemSelectionRange* QItemSelectionRange_new();
QTLIBC_API QItemSelectionRange* QItemSelectionRange_new2(QModelIndex* topL, QModelIndex* bottomR);
QTLIBC_API QItemSelectionRange* QItemSelectionRange_new3(QModelIndex* index);
QTLIBC_API QItemSelectionRange* QItemSelectionRange_new4(QItemSelectionRange* param1);
QTLIBC_API void QItemSelectionRange_Swap(QItemSelectionRange* self, QItemSelectionRange* other);
QTLIBC_API int QItemSelectionRange_Top(const QItemSelectionRange* self);
QTLIBC_API int QItemSelectionRange_Left(const QItemSelectionRange* self);
QTLIBC_API int QItemSelectionRange_Bottom(const QItemSelectionRange* self);
QTLIBC_API int QItemSelectionRange_Right(const QItemSelectionRange* self);
QTLIBC_API int QItemSelectionRange_Width(const QItemSelectionRange* self);
QTLIBC_API int QItemSelectionRange_Height(const QItemSelectionRange* self);
QTLIBC_API QPersistentModelIndex* QItemSelectionRange_TopLeft(const QItemSelectionRange* self);
QTLIBC_API QPersistentModelIndex* QItemSelectionRange_BottomRight(const QItemSelectionRange* self);
QTLIBC_API QModelIndex* QItemSelectionRange_Parent(const QItemSelectionRange* self);
QTLIBC_API QAbstractItemModel* QItemSelectionRange_Model(const QItemSelectionRange* self);
QTLIBC_API bool QItemSelectionRange_Contains(const QItemSelectionRange* self, QModelIndex* index);
QTLIBC_API bool QItemSelectionRange_Contains2(const QItemSelectionRange* self, int row, int column, QModelIndex* parentIndex);
QTLIBC_API bool QItemSelectionRange_Intersects(const QItemSelectionRange* self, QItemSelectionRange* other);
QTLIBC_API QItemSelectionRange* QItemSelectionRange_Intersected(const QItemSelectionRange* self, QItemSelectionRange* other);
QTLIBC_API bool QItemSelectionRange_OperatorEqual(const QItemSelectionRange* self, QItemSelectionRange* other);
QTLIBC_API bool QItemSelectionRange_OperatorNotEqual(const QItemSelectionRange* self, QItemSelectionRange* other);
QTLIBC_API bool QItemSelectionRange_IsValid(const QItemSelectionRange* self);
QTLIBC_API bool QItemSelectionRange_IsEmpty(const QItemSelectionRange* self);
QTLIBC_API libqt_list /* of QModelIndex* */ QItemSelectionRange_Indexes(const QItemSelectionRange* self);
QTLIBC_API void QItemSelectionRange_Delete(QItemSelectionRange* self);
QTLIBC_API QItemSelectionModel* QItemSelectionModel_new();
QTLIBC_API QMetaObject* QItemSelectionModel_MetaObject(const QItemSelectionModel* self);
QTLIBC_API void* QItemSelectionModel_Metacast(QItemSelectionModel* self, const char* param1);
QTLIBC_API int QItemSelectionModel_Metacall(QItemSelectionModel* self, int param1, int param2, void** param3);
QTLIBC_API libqt_string QItemSelectionModel_Tr(const char* s);
QTLIBC_API QModelIndex* QItemSelectionModel_CurrentIndex(const QItemSelectionModel* self);
QTLIBC_API bool QItemSelectionModel_IsSelected(const QItemSelectionModel* self, QModelIndex* index);
QTLIBC_API bool QItemSelectionModel_IsRowSelected(const QItemSelectionModel* self, int row);
QTLIBC_API bool QItemSelectionModel_IsColumnSelected(const QItemSelectionModel* self, int column);
QTLIBC_API bool QItemSelectionModel_RowIntersectsSelection(const QItemSelectionModel* self, int row);
QTLIBC_API bool QItemSelectionModel_ColumnIntersectsSelection(const QItemSelectionModel* self, int column);
QTLIBC_API bool QItemSelectionModel_HasSelection(const QItemSelectionModel* self);
QTLIBC_API libqt_list /* of QModelIndex* */ QItemSelectionModel_SelectedIndexes(const QItemSelectionModel* self);
QTLIBC_API libqt_list /* of QModelIndex* */ QItemSelectionModel_SelectedRows(const QItemSelectionModel* self);
QTLIBC_API libqt_list /* of QModelIndex* */ QItemSelectionModel_SelectedColumns(const QItemSelectionModel* self);
QTLIBC_API QItemSelection* QItemSelectionModel_Selection(const QItemSelectionModel* self);
QTLIBC_API QAbstractItemModel* QItemSelectionModel_Model(const QItemSelectionModel* self);
QTLIBC_API QAbstractItemModel* QItemSelectionModel_Model2(QItemSelectionModel* self);
QTLIBC_API void QItemSelectionModel_SetModel(QItemSelectionModel* self, QAbstractItemModel* model);
QTLIBC_API void QItemSelectionModel_SetCurrentIndex(QItemSelectionModel* self, QModelIndex* index, int command);
QTLIBC_API void QItemSelectionModel_Select(QItemSelectionModel* self, QModelIndex* index, int command);
QTLIBC_API void QItemSelectionModel_Select2(QItemSelectionModel* self, QItemSelection* selection, int command);
QTLIBC_API void QItemSelectionModel_Clear(QItemSelectionModel* self);
QTLIBC_API void QItemSelectionModel_Reset(QItemSelectionModel* self);
QTLIBC_API void QItemSelectionModel_ClearSelection(QItemSelectionModel* self);
QTLIBC_API void QItemSelectionModel_ClearCurrentIndex(QItemSelectionModel* self);
QTLIBC_API libqt_string QItemSelectionModel_Tr2(const char* s, const char* c);
QTLIBC_API libqt_string QItemSelectionModel_Tr3(const char* s, const char* c, int n);
QTLIBC_API bool QItemSelectionModel_IsRowSelected2(const QItemSelectionModel* self, int row, QModelIndex* parent);
QTLIBC_API bool QItemSelectionModel_IsColumnSelected2(const QItemSelectionModel* self, int column, QModelIndex* parent);
QTLIBC_API bool QItemSelectionModel_RowIntersectsSelection2(const QItemSelectionModel* self, int row, QModelIndex* parent);
QTLIBC_API bool QItemSelectionModel_ColumnIntersectsSelection2(const QItemSelectionModel* self, int column, QModelIndex* parent);
QTLIBC_API libqt_list /* of QModelIndex* */ QItemSelectionModel_SelectedRows1(const QItemSelectionModel* self, int column);
QTLIBC_API libqt_list /* of QModelIndex* */ QItemSelectionModel_SelectedColumns1(const QItemSelectionModel* self, int row);
QTLIBC_API void QItemSelectionModel_EmitSelectionChanged(QItemSelectionModel* self, QItemSelection* newSelection, QItemSelection* oldSelection);
QTLIBC_API void QItemSelectionModel_Delete(QItemSelectionModel* self);