src/qt/libqitemselectionmodel.bf

using System;
using System.Interop;
namespace Qt;

[AllowDuplicates]
public enum QItemSelectionModel__SelectionFlag
{
	NoUpdate = 0,
	Clear = 1,
	Select = 2,
	Deselect = 4,
	Toggle = 8,
	Current = 16,
	Rows = 32,
	Columns = 64,
	SelectCurrent = 18,
	ToggleCurrent = 24,
	ClearAndSelect = 3,
}
public interface IQItemSelectionRange
{
	void* NativePtr { get; }
}
public class QItemSelectionRange : IQItemSelectionRange
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QItemSelectionRange_new();
	}
	
	public ~this()
	{
		CQt.QItemSelectionRange_Delete(this.nativePtr);
	}
	
	public void Swap(IQItemSelectionRange other)
	{
		CQt.QItemSelectionRange_Swap(this.nativePtr, (other == default) ? default : (void*)other.NativePtr);
	}
	
	public int32 Top()
	{
		return CQt.QItemSelectionRange_Top(this.nativePtr);
	}
	
	public int32 Left()
	{
		return CQt.QItemSelectionRange_Left(this.nativePtr);
	}
	
	public int32 Bottom()
	{
		return CQt.QItemSelectionRange_Bottom(this.nativePtr);
	}
	
	public int32 Right()
	{
		return CQt.QItemSelectionRange_Right(this.nativePtr);
	}
	
	public int32 Width()
	{
		return CQt.QItemSelectionRange_Width(this.nativePtr);
	}
	
	public int32 Height()
	{
		return CQt.QItemSelectionRange_Height(this.nativePtr);
	}
	
	public void* TopLeft()
	{
		return CQt.QItemSelectionRange_TopLeft(this.nativePtr);
	}
	
	public void* BottomRight()
	{
		return CQt.QItemSelectionRange_BottomRight(this.nativePtr);
	}
	
	public void Parent()
	{
		CQt.QItemSelectionRange_Parent(this.nativePtr);
	}
	
	public void* Model()
	{
		return CQt.QItemSelectionRange_Model(this.nativePtr);
	}
	
	public bool Contains(IQModelIndex index)
	{
		return CQt.QItemSelectionRange_Contains(this.nativePtr, (index == default) ? default : (void*)index.NativePtr);
	}
	
	public bool Contains2(int32 row, int32 column, IQModelIndex parentIndex)
	{
		return CQt.QItemSelectionRange_Contains2(this.nativePtr, row, column, (parentIndex == default) ? default : (void*)parentIndex.NativePtr);
	}
	
	public bool Intersects(IQItemSelectionRange other)
	{
		return CQt.QItemSelectionRange_Intersects(this.nativePtr, (other == default) ? default : (void*)other.NativePtr);
	}
	
	public void Intersected(IQItemSelectionRange other)
	{
		CQt.QItemSelectionRange_Intersected(this.nativePtr, (other == default) ? default : (void*)other.NativePtr);
	}
	
	public bool OperatorEqual(IQItemSelectionRange other)
	{
		return CQt.QItemSelectionRange_OperatorEqual(this.nativePtr, (other == default) ? default : (void*)other.NativePtr);
	}
	
	public bool OperatorNotEqual(IQItemSelectionRange other)
	{
		return CQt.QItemSelectionRange_OperatorNotEqual(this.nativePtr, (other == default) ? default : (void*)other.NativePtr);
	}
	
	public bool IsValid()
	{
		return CQt.QItemSelectionRange_IsValid(this.nativePtr);
	}
	
	public bool IsEmpty()
	{
		return CQt.QItemSelectionRange_IsEmpty(this.nativePtr);
	}
	
	public void[] Indexes()
	{
		return CQt.QItemSelectionRange_Indexes(this.nativePtr);
	}
	
}
extension CQt
{
	[LinkName("QItemSelectionRange_new")]
	public static extern void* QItemSelectionRange_new();
	[LinkName("QItemSelectionRange_new2")]
	public static extern void* QItemSelectionRange_new2(void* topL, void* bottomR);
	[LinkName("QItemSelectionRange_new3")]
	public static extern void* QItemSelectionRange_new3(void* index);
	[LinkName("QItemSelectionRange_new4")]
	public static extern void* QItemSelectionRange_new4(void* param1);
	[LinkName("QItemSelectionRange_Swap")]
	public static extern void QItemSelectionRange_Swap(void* c_this, void* other);
	[LinkName("QItemSelectionRange_Top")]
	public static extern int32 QItemSelectionRange_Top(void* c_this);
	[LinkName("QItemSelectionRange_Left")]
	public static extern int32 QItemSelectionRange_Left(void* c_this);
	[LinkName("QItemSelectionRange_Bottom")]
	public static extern int32 QItemSelectionRange_Bottom(void* c_this);
	[LinkName("QItemSelectionRange_Right")]
	public static extern int32 QItemSelectionRange_Right(void* c_this);
	[LinkName("QItemSelectionRange_Width")]
	public static extern int32 QItemSelectionRange_Width(void* c_this);
	[LinkName("QItemSelectionRange_Height")]
	public static extern int32 QItemSelectionRange_Height(void* c_this);
	[LinkName("QItemSelectionRange_TopLeft")]
	public static extern void* QItemSelectionRange_TopLeft(void* c_this);
	[LinkName("QItemSelectionRange_BottomRight")]
	public static extern void* QItemSelectionRange_BottomRight(void* c_this);
	[LinkName("QItemSelectionRange_Parent")]
	public static extern void QItemSelectionRange_Parent(void* c_this);
	[LinkName("QItemSelectionRange_Model")]
	public static extern void* QItemSelectionRange_Model(void* c_this);
	[LinkName("QItemSelectionRange_Contains")]
	public static extern bool QItemSelectionRange_Contains(void* c_this, void* index);
	[LinkName("QItemSelectionRange_Contains2")]
	public static extern bool QItemSelectionRange_Contains2(void* c_this, int32 row, int32 column, void* parentIndex);
	[LinkName("QItemSelectionRange_Intersects")]
	public static extern bool QItemSelectionRange_Intersects(void* c_this, void* other);
	[LinkName("QItemSelectionRange_Intersected")]
	public static extern void QItemSelectionRange_Intersected(void* c_this, void* other);
	[LinkName("QItemSelectionRange_OperatorEqual")]
	public static extern bool QItemSelectionRange_OperatorEqual(void* c_this, void* other);
	[LinkName("QItemSelectionRange_OperatorNotEqual")]
	public static extern bool QItemSelectionRange_OperatorNotEqual(void* c_this, void* other);
	[LinkName("QItemSelectionRange_IsValid")]
	public static extern bool QItemSelectionRange_IsValid(void* c_this);
	[LinkName("QItemSelectionRange_IsEmpty")]
	public static extern bool QItemSelectionRange_IsEmpty(void* c_this);
	[LinkName("QItemSelectionRange_Indexes")]
	public static extern void[] QItemSelectionRange_Indexes(void* c_this);
	/// Delete this object from C++ memory
	[LinkName("QItemSelectionRange_Delete")]
	public static extern void QItemSelectionRange_Delete(void* self);
}
public interface IQItemSelectionModel
{
	void* NativePtr { get; }
}
public class QItemSelectionModel : IQItemSelectionModel, IQObject
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QItemSelectionModel_new();
	}
	
	public ~this()
	{
		CQt.QItemSelectionModel_Delete(this.nativePtr);
	}
	
	public virtual void* MetaObject()
	{
		return CQt.QItemSelectionModel_MetaObject(this.nativePtr);
	}
	
	public virtual void* Metacast(char8* param1)
	{
		return CQt.QItemSelectionModel_Metacast(this.nativePtr, param1);
	}
	
	public virtual int32 Metacall(int64 param1, int32 param2, void** param3)
	{
		return CQt.QItemSelectionModel_Metacall(this.nativePtr, param1, param2, param3);
	}
	
	public static libqt_string Tr(char8* s)
	{
		return CQt.QItemSelectionModel_Tr(s);
	}
	
	public void CurrentIndex()
	{
		CQt.QItemSelectionModel_CurrentIndex(this.nativePtr);
	}
	
	public bool IsSelected(IQModelIndex index)
	{
		return CQt.QItemSelectionModel_IsSelected(this.nativePtr, (index == default) ? default : (void*)index.NativePtr);
	}
	
	public bool IsRowSelected(int32 row)
	{
		return CQt.QItemSelectionModel_IsRowSelected(this.nativePtr, row);
	}
	
	public bool IsColumnSelected(int32 column)
	{
		return CQt.QItemSelectionModel_IsColumnSelected(this.nativePtr, column);
	}
	
	public bool RowIntersectsSelection(int32 row)
	{
		return CQt.QItemSelectionModel_RowIntersectsSelection(this.nativePtr, row);
	}
	
	public bool ColumnIntersectsSelection(int32 column)
	{
		return CQt.QItemSelectionModel_ColumnIntersectsSelection(this.nativePtr, column);
	}
	
	public bool HasSelection()
	{
		return CQt.QItemSelectionModel_HasSelection(this.nativePtr);
	}
	
	public void[] SelectedIndexes()
	{
		return CQt.QItemSelectionModel_SelectedIndexes(this.nativePtr);
	}
	
	public void[] SelectedRows()
	{
		return CQt.QItemSelectionModel_SelectedRows(this.nativePtr);
	}
	
	public void[] SelectedColumns()
	{
		return CQt.QItemSelectionModel_SelectedColumns(this.nativePtr);
	}
	
	public void Selection()
	{
		CQt.QItemSelectionModel_Selection(this.nativePtr);
	}
	
	public void* Model()
	{
		return CQt.QItemSelectionModel_Model(this.nativePtr);
	}
	
	public void* Model2()
	{
		return CQt.QItemSelectionModel_Model2(this.nativePtr);
	}
	
	public void SetModel(IQAbstractItemModel model)
	{
		CQt.QItemSelectionModel_SetModel(this.nativePtr, (model == null) ? null : (void*)model.NativePtr);
	}
	
	public virtual void SetCurrentIndex(IQModelIndex index, int64 command)
	{
		CQt.QItemSelectionModel_SetCurrentIndex(this.nativePtr, (index == default) ? default : (void*)index.NativePtr, command);
	}
	
	public virtual void Select(IQModelIndex index, int64 command)
	{
		CQt.QItemSelectionModel_Select(this.nativePtr, (index == default) ? default : (void*)index.NativePtr, command);
	}
	
	public virtual void Select2(IQItemSelection selection, int64 command)
	{
		CQt.QItemSelectionModel_Select2(this.nativePtr, (selection == default) ? default : (void*)selection.NativePtr, command);
	}
	
	public virtual void Clear()
	{
		CQt.QItemSelectionModel_Clear(this.nativePtr);
	}
	
	public virtual void Reset()
	{
		CQt.QItemSelectionModel_Reset(this.nativePtr);
	}
	
	public void ClearSelection()
	{
		CQt.QItemSelectionModel_ClearSelection(this.nativePtr);
	}
	
	public virtual void ClearCurrentIndex()
	{
		CQt.QItemSelectionModel_ClearCurrentIndex(this.nativePtr);
	}
	
	public void EmitSelectionChanged(IQItemSelection newSelection, IQItemSelection oldSelection)
	{
		CQt.QItemSelectionModel_EmitSelectionChanged(this.nativePtr, (newSelection == default) ? default : (void*)newSelection.NativePtr, (oldSelection == default) ? default : (void*)oldSelection.NativePtr);
	}
	
	public static libqt_string Tr2(char8* s, char8* c)
	{
		return CQt.QItemSelectionModel_Tr2(s, c);
	}
	
	public static libqt_string Tr3(char8* s, char8* c, int32 n)
	{
		return CQt.QItemSelectionModel_Tr3(s, c, n);
	}
	
	public bool IsRowSelected2(int32 row, IQModelIndex parent)
	{
		return CQt.QItemSelectionModel_IsRowSelected2(this.nativePtr, row, (parent == default) ? default : (void*)parent.NativePtr);
	}
	
	public bool IsColumnSelected2(int32 column, IQModelIndex parent)
	{
		return CQt.QItemSelectionModel_IsColumnSelected2(this.nativePtr, column, (parent == default) ? default : (void*)parent.NativePtr);
	}
	
	public bool RowIntersectsSelection2(int32 row, IQModelIndex parent)
	{
		return CQt.QItemSelectionModel_RowIntersectsSelection2(this.nativePtr, row, (parent == default) ? default : (void*)parent.NativePtr);
	}
	
	public bool ColumnIntersectsSelection2(int32 column, IQModelIndex parent)
	{
		return CQt.QItemSelectionModel_ColumnIntersectsSelection2(this.nativePtr, column, (parent == default) ? default : (void*)parent.NativePtr);
	}
	
	public void[] SelectedRows1(int32 column)
	{
		return CQt.QItemSelectionModel_SelectedRows1(this.nativePtr, column);
	}
	
	public void[] SelectedColumns1(int32 row)
	{
		return CQt.QItemSelectionModel_SelectedColumns1(this.nativePtr, row);
	}
	
	public virtual bool Event(IQEvent event)
	{
		return CQt.QObject_Event(this.nativePtr, (event == null) ? null : (void*)event.NativePtr);
	}
	
	public virtual bool EventFilter(IQObject watched, IQEvent event)
	{
		return CQt.QObject_EventFilter(this.nativePtr, (watched == null) ? null : (void*)watched.NativePtr, (event == null) ? null : (void*)event.NativePtr);
	}
	
	public libqt_string ObjectName()
	{
		return CQt.QObject_ObjectName(this.nativePtr);
	}
	
	public void SetObjectName(IQAnyStringView name)
	{
		CQt.QObject_SetObjectName(this.nativePtr, (name == default) ? default : (char8*)name.NativePtr);
	}
	
	public bool IsWidgetType()
	{
		return CQt.QObject_IsWidgetType(this.nativePtr);
	}
	
	public bool IsWindowType()
	{
		return CQt.QObject_IsWindowType(this.nativePtr);
	}
	
	public bool IsQuickItemType()
	{
		return CQt.QObject_IsQuickItemType(this.nativePtr);
	}
